added generated files to project, ignored in git

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,40 @@
 *.mode1v3
 *.pbxuser
 build
+*.o
+*.lev
+Makefile
+dat/Makefile
+dat/data
+dat/dungeon.pdf
+dat/options
+dat/oracles
+dat/quest.dat
+dat/quest_levs
+dat/rumors
+dat/spec_levs
+doc/Makefile
+include/date.h
+include/dgn_comp.h
+include/filename.h
+include/onames.h
+include/pm.h
+include/tile.h
+include/vis_tab.h
+src/Makefile
+src/config.h-t
+src/hack.h-t
+src/monstr.c
+src/tile.c
+src/vis_tab.c
+util/Makefile
+dat/dungeon
+include/lev_comp.h
+util/dgn_comp
+util/dgn_lex.c
+util/dgn_yacc.c
+util/lev_comp
+util/lev_lex.c
+util/lev_yacc.c
+util/makedefs
+util/tilemap
