absurd32 tileset, wrong one (nh), but proves that tilesets work

--- a/win/iphone/tilesets.plist
+++ b/win/iphone/tilesets.plist
@@ -6,5 +6,9 @@
 		<key>filename</key>
 		<string>gltile32.png</string>
 	</dict>
+	<dict>
+		<key>filename</key>
+		<string>absurd32.png</string>
+	</dict>
 </array>
 </plist>
