changed the original tileset copyright holder

--- a/win/iphone/tilesets.plist
+++ b/win/iphone/tilesets.plist
@@ -10,7 +10,8 @@
 	</dict>
 	<dict>
 		<key>author</key>
-		<string>Warwick Allison</string>
+		<string>Mitsuhiro
+Mitsuhiro Itakura</string>
 		<key>filename</key>
 		<string>gltile32.png</string>
 	</dict>
