wizard mode for sim, fixed author for gltile32, tileset debug

--- a/win/iphone/tilesets.plist
+++ b/win/iphone/tilesets.plist
@@ -10,8 +10,7 @@
 	</dict>
 	<dict>
 		<key>author</key>
-		<string>Mitsuhiro
-Mitsuhiro Itakura</string>
+		<string>Mitsuhiro Itakura</string>
 		<key>filename</key>
 		<string>gltile32.png</string>
 	</dict>
