--- a/win/iphone/Settings.bundle/Root.plist
+++ b/win/iphone/Settings.bundle/Root.plist
@@ -52,6 +52,16 @@
 			<key>DefaultValue</key>
 			<false/>
 		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Enable Double Taps</string>
+			<key>Key</key>
+			<string>kDoubleTapsEnabled</string>
+			<key>DefaultValue</key>
+			<true/>
+		</dict>
 	</array>
 </dict>
 </plist>
