added Joep Gerrits to gltile32 authors

--- a/win/iphone/tilesets.plist
+++ b/win/iphone/tilesets.plist
@@ -10,7 +10,7 @@
 	</dict>
 	<dict>
 		<key>author</key>
-		<string>Mitsuhiro Itakura</string>
+		<string>Mitsuhiro Itakura, Joep Gerrits</string>
 		<key>filename</key>
 		<string>gltile32.png</string>
 	</dict>
