rotation lock via settings app

--- a/win/iphone/Settings.bundle/Root.plist
+++ b/win/iphone/Settings.bundle/Root.plist
@@ -46,21 +46,43 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
-			<string>Debug Mode</string>
-			<key>Key</key>
-			<string>kWizard</string>
-			<key>DefaultValue</key>
-			<false/>
-		</dict>
-		<dict>
-			<key>Type</key>
-			<string>PSToggleSwitchSpecifier</string>
-			<key>Title</key>
 			<string>Enable Double Taps</string>
 			<key>Key</key>
 			<string>kDoubleTapsEnabled</string>
 			<key>DefaultValue</key>
 			<true/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSMultiValueSpecifier</string>
+			<key>Title</key>
+			<string>Rotation Lock</string>
+			<key>Key</key>
+			<string>kRotationLock</string>
+			<key>DefaultValue</key>
+			<string>kRotationLockNone</string>
+			<key>Titles</key>
+			<array>
+				<string>None (variable)</string>
+				<string>Portrait</string>
+				<string>Landscape</string>
+			</array>
+			<key>Values</key>
+			<array>
+				<string>kRotationLockNone</string>
+				<string>kRotationLockPortrait</string>
+				<string>kRotationLockLandscape</string>
+			</array>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Debug Mode</string>
+			<key>Key</key>
+			<string>kWizard</string>
+			<key>DefaultValue</key>
+			<false/>
 		</dict>
 	</array>
 </dict>
