perl script to build chozo32.png, complete with first in-game version

--- a/win/iphone/tilesets.plist
+++ b/win/iphone/tilesets.plist
@@ -15,6 +15,12 @@
 		<string>gltile32.png</string>
 	</dict>
 	<dict>
+		<key>author</key>
+		<string>James Hogwood</string>
+		<key>filename</key>
+		<string>chozo32.png</string>
+	</dict>
+	<dict>
 		<key>title</key>
 		<string>ascii</string>
 	</dict>
