renamed chozoc tileset

--- a/win/iphone/tilesets.plist
+++ b/win/iphone/tilesets.plist
@@ -18,7 +18,7 @@
 		<key>author</key>
 		<string>James Hogwood</string>
 		<key>filename</key>
-		<string>chozo32c.png</string>
+		<string>chozoc32.png</string>
 	</dict>
 	<dict>
 		<key>title</key>
