xcode 4, more universal gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,39 @@
+# os x finder
 .DS_Store
+
+# xcode 3
 *.mode1v3
 *.pbxuser
+
+# xcode 4
+xcuserdata
+
+# svn
 .svn
+
+# emacs backup files
+*~
+
+# vi
+*.swp
+
+# build directory
 build
+
+# some artifacts
 *.o
 *.lev
+
+# some results of applying diff
 *.rej
 *.orig
+
+# project specific files
 win/share/tile2png
+
+# NetHack specific files
 Makefile
-dat/Makefile
+
 dat/data
 dat/dungeon.pdf
 dat/options
@@ -18,7 +42,8 @@ dat/quest.dat
 dat/quest_levs
 dat/rumors
 dat/spec_levs
-doc/Makefile
+dat/dungeon
+
 include/date.h
 include/dgn_comp.h
 include/filename.h
@@ -26,15 +51,14 @@ include/onames.h
 include/pm.h
 include/tile.h
 include/vis_tab.h
-src/Makefile
+include/lev_comp.h
+
 src/config.h-t
 src/hack.h-t
 src/monstr.c
 src/tile.c
 src/vis_tab.c
-util/Makefile
-dat/dungeon
-include/lev_comp.h
+
 util/dgn_comp
 util/dgn_lex.c
 util/dgn_yacc.c
@@ -43,19 +67,3 @@ util/lev_lex.c
 util/lev_yacc.c
 util/makedefs
 util/tilemap
-slashem_enforcer_0.6.patch
-src/apply.c.orig
-src/dig.c.orig
-src/dig.c.rej
-src/do_wear.c.orig
-src/engrave.c.orig
-src/engrave.c.rej
-src/invent.c.orig
-src/invent.c.rej
-src/lock.c.orig
-src/mon.c.orig
-src/monst.c.orig
-src/objnam.c.orig
-src/tech.c.orig
-src/trap.c.orig
-src/wield.c.orig
