--- a/sys/unix/Makefile.dat
+++ b/sys/unix/Makefile.dat
@@ -297,7 +297,7 @@ spec_levs: ../util/lev_comp \
 	touch spec_levs
 
 quest_levs: ../util/lev_comp \
-	Arch.des Barb.des Caveman.des Flame.des Healer.des Ice.des Knight.des \
+	Arch.des Barb.des Caveman.des Flame.des Healer.des Ice.des Jedi.des Knight.des \
 	Monk.des Necro.des Priest.des Ranger.des Rogue.des Samurai.des \
 	Tourist.des Slayer.des Valkyrie.des Wizard.des Yeoman.des
 	../util/lev_comp Arch.des
@@ -306,6 +306,9 @@ quest_levs: ../util/lev_comp \
 	../util/lev_comp Flame.des
 	../util/lev_comp Healer.des
 	../util/lev_comp Ice.des
+	@if egrep -s Jedi options > /dev/null ; then \
+	echo ../util/lev_comp Jedi.des ; ../util/lev_comp Jedi.des ; \
+	else rm -f Jed-goal.lev Jed-fil?.lev Jed-loca.lev Jed-strt.lev ; fi
 	../util/lev_comp Knight.des
 	../util/lev_comp Monk.des
 	../util/lev_comp Necro.des
