--- a/win/iOS/SlashEM-Info.plist
+++ b/win/iOS/SlashEM-Info.plist
@@ -8,8 +8,24 @@
 	<string>Slash'EM</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>CFBundleIconFile</key>
-	<string></string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string></string>
+		<string>Icon@2.png</string>
+		<string>Icon.png</string>
+	</array>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string></string>
+				<string>Icon@2.png</string>
+				<string>Icon.png</string>
+			</array>
+		</dict>
+	</dict>
 	<key>CFBundleIdentifier</key>
 	<string>com.dirkz.slashem</string>
 	<key>CFBundleInfoDictionaryVersion</key>
